Snapshot ed40d65791

* #3961 Fix crash when starting the journal for the first time (marco)

Snapshot b8ec83c5b8

* Add several ogg subtypes. (marco)

Snapshot 5a595ea04e

* #948 Fix passphrase encoding for some passphrases. (bertf)
* #3794 Fix dragging of images from clipboard (marco)

Snapshot 5a595ea04e

* Open ogg files in the browser by default. (marco)
* #948 Accept ascii passphrases for WEP networks. '$:1a2b3c4d' for hex keys,
  's:my passphrase' for 5 or 13 characters ascii passphrases, or just the plain
  key for ascii passphrases of any other length. (tomeu)

Snapshot 5a595ea04e

* Save state of volume when shutdown and reboot fix for #3652 (erikos)

Snapshot 5a595ea04e

* #3655 Specify the order of the Activity taskbar icons. (marco)

Snapshot 5a595ea04e

* #3605 Turn off memory based sizing in the donut for trial-3. (danw)
* #3649 Human readable file names on USB. (marco)

Snapshot b8ce5083b7

* #3601 Always remove invites from the frame. (cassidy)

Snapshot b8ce5083b7

* #3560 Updated spanish translation. (marco)

Snapshot b8ce5083b7

* Handle the passing of the child of the toolitem to the WidgetInvoker
  in ToolInvoker, FrameWidgetInvoker (erikos) 

Snapshot b8ce5083b7

* #3293 Fix that several palettes are not hooked up to the same button (erikos)

Snapshot ed22733941

* #3418 Fix updating of the friends on the frame. (marco)
* #2719 Use Jabber instead of Server in the config. (marco)
* #3514 Remove invite when the activiy disappear from the mesh. (cassidy)
* #3003 Make image drags on the clipboard work consistently. (marco)

Snapshot 8ef6c57f8b

* #3478 Fix handling of non-default types. (bertf)

Snapshot 0a666e23cf

* #2977 Associate activity with his journal object if there is one. (marco)
* #3045 Fix clipboard palettes behavior. (marco)
* #2739 Make frame show on corners also after showing palettes. (marco)

Snapshot 47f473189e

* Fix typo so the removal of expanded activity bundles is complete. (tomeu)